@@ -50,6 +50,11 @@ ignored</p>
             One of "error", "warning", "info", "verbose", "debug" (decreasing order)</td>
     <td valign="top" align="center">No - default is "warning".</td>
   </tr>
+  <tr>
+    <td valign="top">encoding</td>
+    <td valign="top">encoding to use, default is ""; the local system encoding.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
