@@ -444,6 +444,14 @@ public class Checksum extends MatchingTask implements Condition {
         if (todir != null) {
             // A separate directory was explicitly declared
             String path = (String) relativeFilePaths.get(file);
+            if(path==null) {
+                //bug 37386. this should not occur, but it has, once.
+                throw new BuildException("Internal error: " +
+                        "relativeFilePaths could not match file"+
+                        file+
+                        "\n" +
+                        "please file a bug report on this");
+            }
             directory = new File(todir, path).getParentFile();
             // Create the directory, as it might not exist.
             directory.mkdirs();
