@@ -20,6 +20,10 @@ package org.apache.tools.ant.taskdefs;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.Writer;
+import java.io.BufferedWriter;
+import java.io.OutputStreamWriter;
+import java.io.FileOutputStream;
 
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
@@ -37,6 +41,8 @@ public class Echo extends Task {
     protected String message = ""; // required
     protected File file = null;
     protected boolean append = false;
+    /** encoding; set to null or empty means 'default' */
+    private String encoding = "";
 
     // by default, messages are always displayed
     protected int logLevel = Project.MSG_WARN;
@@ -50,9 +56,16 @@ public class Echo extends Task {
         if (file == null) {
             log(message, logLevel);
         } else {
-            FileWriter out = null;
+            Writer out = null;
             try {
-                out = new FileWriter(file.getAbsolutePath(), append);
+                String filename = file.getAbsolutePath();
+                if(encoding==null || encoding.length()==0) {
+                    out = new FileWriter(filename, append);
+                } else {
+                    out = new BufferedWriter(
+                            new OutputStreamWriter(
+                                new FileOutputStream(filename, append),encoding));
+                }
                 out.write(message, 0, message.length());
             } catch (IOException ioe) {
                 throw new BuildException(ioe, getLocation());
@@ -112,6 +125,15 @@ public class Echo extends Task {
      */
     public void setLevel(EchoLevel echoLevel) {
         logLevel = echoLevel.getLevel();
+    }
+
+    /**
+     * Declare the encoding to use when outputting to a file;
+     * Use "" for the platform's default encoding.
+     * @param encoding
+     */
+    public void setEncoding(String encoding) {
+        this.encoding = encoding;
     }
 
     /**
